@@ -46,6 +46,7 @@ dnl Checks for header files.
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
+AC_C_INLINE
 bh_C_SIGNED
 AC_TYPE_SIZE_T
 jm_AC_TYPE_LONG_LONG
