@@ -1,3 +1,8 @@
+2003-11-28  Bruno Haible  <bruno@clisp.org>
+
+	* configure.ac: Invoke AC_C_INLINE.
+	* Makefile.am (config.h.msvc): Define SIZE_MAX and inline.
+
 2003-11-23  Paul Eggert  <eggert@twinsun.com>
             Bruno Haible  <bruno@clisp.org>
 
